# syn_parser

./: .github_workflow_reminder.md  .gitignore  Cargo.toml  README.md  code_graph.ron  concurrency_summary.md  core_design_direction.md  doc_evaluation.md  docs_housecleaning.md  documentation_guidelines.md  file_documentation_template.md  housecleaning_instructions.md  names  project_description.md  proposed_project_structure.md  refactor_tracker.md  temp.md  track_file_analysis.md
.github/: REFACTOR_RULES.md
benches/: type_processing.rs
book/: book.toml
book/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/src/: SUMMARY.md  document_history.md
data/: graph.ron
docs/: ARCHITECTURE_DECISIONS.md  Architectural_Revamp.md  REGAIN_SANITY.md  ai_next_task.md  ai_todo.md  goal_statement.md  goals.md  make_modular.md  modular_tests.md  modular_visitor.md  refactor_test_progress.md  test_improvements.md  visitor_architecture_approach.md
docs/ADRs/: 2025-03-15-id-system.md
docs/active_roadmap/: concrete_migration_steps.md
docs/ai_notes/: ai_project_notes.md  testing_status_start.md
docs/code_review/: new_roadmap.md  overview.md  refactor_reasoning.md  visitor_workflow.md
docs/different_approaches/: weird_visitor_structure.md
docs/finished/: make_modular.md  modular_tests.md
docs/roadmap/: concrete_migration_steps.md
docs/testing/: strategy.md
src/: error.rs  lib.rs  main.rs  parser.rs
src/parser/: graph.rs  graph_ids.rs  mod.rs  nodes.rs  relations.rs  types.rs  visitor.rs
src/serialization/: mod.rs  ron.rs
test_data/: sample.rs
tests/: mod.rs  parser_tests.rs
tests/common/: mod.rs
tests/data/: code_graph.ron  mod.rs  sample.rs
tests/fixtures/: enums.rs  functions.rs  impls.rs  macros.rs  modules.rs  structs.rs  traits.rs  visibility.rs
tests/integration/: full_graph_tests.rs  mod.rs
tests/parser/: basic_parsing.rs  enums_tests.rs  functions_tests.rs  id_type_safety.rs  impls_tests.rs  macros_tests.rs  mod.rs  modules_tests.rs  structs_tests.rs  traits_tests.rs  (+1 more)
(+60 files in other folders)
