[package]
name = "syn_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
petgraph = "0.7.1"
rayon = "1.1"
dashmap = "6.1"
indexmap = { version = "2.8", features = ["serde", "rayon"] }
ahash = "0.8"
thiserror = "2.0"
uuid = { version = "1.7", features = ["v5"] }
blake3 = "1.5"
indradb = { version = "0.14", features = ["rocksdb-datastore"] }
# indradb-lib = { version = "*", features = ["rocksdb-datastore"] }
# This is not installing correctly, and I am getting errors related to rocksb,
# so for now we will move ahead with in-memory storage from indradb and figure
# out the errors for rocksdb later.
indradb-lib = "*"

[dev-dependencies]
